Added font styles, removed calendar instructions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta name="description" content="Al-Mu'mineen Youth Center - Empowering refugee youth through education and community support in America">
     <title>Al-Mu'mineen Youth Center (AMYC) | Refugee Youth Development</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -151,17 +154,6 @@
                     <!-- Replace YOUR_CALENDAR_ID with your actual Google Calendar ID -->
                     <iframe src="https://calendar.google.com/calendar/embed?src=0599d6f4e07ab46f31efdad584018b15ac1dbded0da138bc8a7b35979bcdba7f%40group.calendar.google.com&ctz=America%2FNew_York" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no">
                     </iframe>
-                </div>
-                <div class="calendar-instructions">
-                    <p><strong>To set up your calendar:</strong></p>
-                    <ol>
-                        <li>Go to <a href="https://calendar.google.com" target="_blank">Google Calendar</a></li>
-                        <li>Create a new calendar for AMYC programs</li>
-                        <li>Click Settings → Settings for my calendars → Select your calendar</li>
-                        <li>Scroll to "Integrate calendar" and copy the Calendar ID</li>
-                        <li>Replace "YOUR_CALENDAR_ID" in the code above with your Calendar ID</li>
-                        <li>Make sure the calendar is set to "Public" in sharing settings</li>
-                    </ol>
                 </div>
             </div>
 
