--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <img src="images/user-upload-1760570189158.jpg?t=1760570258580" alt="AMYC Logo">
+                <img src="images\MYC_Logo_Design_Cropped.png" alt="AMYC Logo">
                 <div class="logo-text">
-                    <span class="logo-name">Al-Mu'mineen Youth Center</span>
-                    <span class="logo-subtitle">AMYC</span>
+                    <span class="logo-name zain-black">Al-Mu'mineen Youth Center</span>
+                    <span class="logo-subtitle zain-regular">AMYC</span>
                 </div>
             </div>
             <button class="mobile-menu-toggle" aria-label="Toggle menu">
@@ -25,14 +25,14 @@
                 <span></span>
             </button>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#initiatives">Initiatives</a></li>
-                <li><a href="#programs">Programs</a></li>
-                <li><a href="#get-involved">Get Involved</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home" class="zain-regular">Home</a></li>
+                <li><a href="#about" class="zain-regular">About Us</a></li>
+                <li><a href="#initiatives" class="zain-regular">Initiatives</a></li>
+                <li><a href="#programs" class="zain-regular">Programs</a></li>
+                <li><a href="#get-involved" class="zain-regular">Get Involved</a></li>
+                <li><a href="#contact" class="zain-regular">Contact</a></li>
             </ul>
-            <a href="#donate" class="donate-btn">Donate Now</a>
+            <a href="#donate" class="donate-btn zain-black">Donate Now</a>
         </div>
     </nav>
 
@@ -43,11 +43,11 @@
         </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h1>Empowering Refugee Youth Through Education</h1>
-            <p>Building bridges to success for new immigrants in America</p>
+            <h1 class="zain-black">Empowering Refugee Youth Through Education</h1>
+            <p class="zain-regular">Building bridges to success for new immigrants in America</p>
             <div class="hero-buttons">
-                <a href="#about" class="btn btn-primary">Learn More</a>
-                <a href="#donate" class="btn btn-secondary">Support Our Mission</a>
+                <a href="#about" class="btn btn-primary zain-regular">Learn More</a>
+                <a href="#donate" class="btn btn-secondary zain-regular">Support Our Mission</a>
             </div>
         </div>
     </section>
@@ -368,7 +368,7 @@
                 </div>
             </div>
         </div>
-    <img src="images/user-upload-1760572397871.jpg" alt="Logos with white backgrounds that need to be made transparent for better incorporation" class="car-carousel-image" loading="eager"></section>
+    </section>
 
     <!-- Get Involved Section -->
     <section id="get-involved" class="get-involved">
@@ -517,7 +517,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="images/user-upload-1760570189158.jpg?t=1760570258580" alt="AMYC Logo">
+                        <img src="images\MYC_Logo_Design_Cropped square.png" alt="AMYC Logo">
                         <span>Al-Mu'mineen Youth Center</span>
                     </div>
                     <p>Empowering refugee youth through education and community support.</p>
